--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               {"glob":"**/*","input":"./node_modules/@ant-design/icons-angular/src/inline-svg/","output":"/assets/"}
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/swiper/swiper-bundle.css"
             ],
             "scripts": []
           },
